tests/ui/boxing-missing-from.stderr
error: attribute #[boxing] requires a corresponding #[from]
 --> tests/ui/boxing-missing-from.rs:6:14
  |
6 |     NotThere(#[boxing] std::io::Error),
  |              ^^^^^^^^^

error: attribute #[boxing] requires a corresponding #[from]
  --> tests/ui/boxing-missing-from.rs:12:5
   |
12 |     #[boxing] err: std::io::Error,
   |     ^^^^^^^^^
